@@ -1,3 +1,8 @@
+2006-05-14  Tom Tromey  <tromey@redhat.com>
+
+	* gnu/java/awt/print/JavaPrinterJob.java (setPrintable): Fixed
+	assignment.
+
 2006-05-15  Sven de Marothy  <sven@physto.se>
 
 	* gnu/java/awt/print/JavaPrinterGraphics.java:
